Small padding fix on small screens

--- a/styles/singleMovieStyles.css
+++ b/styles/singleMovieStyles.css
@@ -111,7 +111,7 @@
 }
 
 .dark .movie-details-container .movie-main .movie-info .main-details h3 {
-  color: hsl(var(--primary))
+  color: hsl(var(--primary));
 }
 
 .movie-details-container .movie-main .movie-info .main-details .synopsis,
@@ -249,5 +249,11 @@
 
   .movie-details-container .movie-main .movie-info .small-details {
     gap: 0.75rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .movie-details-container .movie-main {
+    padding: 0;
   }
 }
